# log-search

./: package-lock.json  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/components/: Directory.tsx  IconMapper.tsx  Navbar.tsx  Searchbar.tsx
app/components/types/: file.ts
app/components/viewer/: Viewer.tsx
app/redux/: store.ts
app/redux/features/: todo-slice.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/error/: mod.rs  nothing_found.rs
src-tauri/src/model/: dfile.rs
src-tauri/src/service/: d_read.rs  f_factory.rs  mod.rs  search_engine.rs  util.rs
